// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`by default matches snapshot 1`] = `
<label class="toggle toggle--start toggle--small"><input type="checkbox" class="toggle__input">
  <div class="toggle__slider"></div>
  <!---->
  <!---->
</label>
`;

exports[`when content for both label and tools is provided matches snapshot 1`] = `
<label class="toggle toggle--start toggle--small"><input type="checkbox" class="toggle__input">
  <div class="toggle__slider"></div>
  <div class="toggle__label">Test</div>
  <div class="toggle__tools"><button>Print</button></div>
</label>
`;

exports[`when content for label is provided matches snapshot 1`] = `
<label class="toggle toggle--start toggle--small"><input type="checkbox" class="toggle__input">
  <div class="toggle__slider"></div>
  <div class="toggle__label">Test</div>
  <!---->
</label>
`;

exports[`when content for tools is provided matches snapshot 1`] = `
<label class="toggle toggle--start toggle--small"><input type="checkbox" class="toggle__input">
  <div class="toggle__slider"></div>
  <!---->
  <div class="toggle__tools"><button>Print</button></div>
</label>
`;

exports[`when position is "end" matches snapshot 1`] = `
<label class="toggle toggle--end toggle--small"><input type="checkbox" class="toggle__input">
  <div class="toggle__slider"></div>
  <!---->
  <!---->
</label>
`;

exports[`when size is "large" matches snapshot 1`] = `
<label class="toggle toggle--start toggle--large"><input type="checkbox" class="toggle__input">
  <div class="toggle__slider"></div>
  <!---->
  <!---->
</label>
`;
